# massout_ekf

./: .gitignore  CMakeLists.txt  Makefile
include/: ekf.h  matrix.h
src/: ekf.cpp  matrix.cpp
tests/: constant_velocity.cpp  multiple_filters.cpp  value_access.cpp  variable_acceleration.cpp
